[tool.poetry]
name = "hexlet-code"
version = "0.1.4"
description = ""
authors = ["Olga Vorobeva <ms.olya_v>"]
readme = "README.md"
packages = [{include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:even_game"
brain-calc = "brain_games.scripts.brain_calc:brain_calc"
brain-gcd = "brain_games.scripts.brain_gcd:brain_gcd"