[tool.poetry]
name = "hexlet-code"
version = "0.1.6"
description = "Collection of 6 different games"
classifiers = [
"Topic :: Education :: Testing",
"Topic :: Games/Entertainment"
]
authors = ["Olga Vorobeva <ms.olya_v@mail.ru>"]
readme = "README.md"
repository = "https://github.com/olyavorobeva/python-project-49"
packages = [{include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:run"
brain-calc = "brain_games.scripts.brain_calc:run"
brain-gcd = "brain_games.scripts.brain_gcd:run"
brain-progression = "brain_games.scripts.brain_progression:run"
brain-prime = "brain_games.scripts.brain_prime:run"